--- a/style.scss
+++ b/style.scss
@@ -1,18 +1,17 @@
 :root {
-  --blur-effect: blur(1px);
-  --blur-timing: 1s;
+	--blur-effect: blur(1px);
+	--blur-timing: 1s;
 }
 
 .blur {
-  .embedWrapper-lXpS3L img,
-  .embedWrapper-lXpS3L video {
-      transition: var(--blur-timing) !important;
-      filter: var(--blur-effect) !important;
-  }
-  .embedWrapper-lXpS3L img:hover,
-  .embedWrapper-lXpS3L video:hover
-  {
-    transition: var(--blur-timing) !important;
-    filter: none !important;
-  }
+	.embedWrapper-lXpS3L img,
+	.embedWrapper-lXpS3L video {
+		transition: var(--blur-timing) !important;
+		filter: var(--blur-effect) !important;
+	}
+	.embedWrapper-lXpS3L img:hover,
+	.embedWrapper-lXpS3L video:hover {
+		transition: var(--blur-timing) !important;
+		filter: none !important;
+	}
 }
